// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[presentation] <Modal /> renders correctly 1`] = `
<div
  class="Portal-inPlace"
>
  <div
    aria-hidden="false"
    aria-modal="true"
    class="Modal TestModal isVisible"
    role="dialog"
    tabindex="0"
  >
    <div
      class="Modal-overlay"
    />
    <div
      class="Modal-content"
    >
      <div
        class="Modal-body"
      >
        <div
          class="Modal-testContent"
        >
          <span>
            Modal content
          </span>
          <button>
            Modal button
          </button>
        </div>
      </div>
      <button
        class="Modal-closeButton"
      >
        <svg
          attr="[object Object]"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`[presentation] <Modal /> renders correctly when isOpen=false 1`] = `null`;

exports[`[presentation] <Modal /> renders correctly when usePortal=true 1`] = `
<div
  aria-hidden="false"
  aria-modal="true"
  class="Modal TestModal isVisible"
  role="dialog"
  tabindex="0"
>
  <div
    class="Modal-overlay"
  />
  <div
    class="Modal-content"
  >
    <div
      class="Modal-body"
    >
      <div
        class="Modal-testContent"
      >
        <span>
          Modal content
        </span>
        <button>
          Modal button
        </button>
      </div>
    </div>
    <button
      class="Modal-closeButton"
    >
      <svg
        attr="[object Object]"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;
